# esp32s3-lvgl-iot-dashboard

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: _locate_alpha_32x32.c.DD2ED9EBB7CE6A84.idx  _sun_alpha_32x32.c.A63860B6D2F0E09D.idx  _tem_alpha_32x32.c.A0BB5F6217CCDD1F.idx  _wifi_alpha_32x32.c.F724E68E5EC082F0.idx  aes3_tie_log.c.ECA445604E0241B5.idx  animimg001.c.073A8B6670E91878.idx  animimg002.c.E7BD77CD7D2F640E.idx  animimg003.c.709D5C3923AE8A6F.idx  app_sr.c.DFF2962E120DDC4E.idx  app_sr.h.E111ECB02F9FF950.idx  app_ui.c.B5031B2834CCB91B.idx  app_ui.h.B02279BCCD78C7BE.idx  app_ui_music.c.EF832773A865A3BD.idx  app_ui_music.h.48F5F1167C8501EB.idx  assembly.h.85A2C45F24171502.idx  audio_codec_ctrl_i2c.c.036FAF2C70EA1ACF.idx  audio_codec_ctrl_if.h.0BE4F6BBFA350959.idx  audio_codec_ctrl_spi.c.93BB48BCD5A7D6A9.idx  audio_codec_data_i2s.c.17007B7CF04B40FE.idx  audio_codec_data_if.h.D57BCFA8CC9C6943.idx  audio_codec_gpio.c.F1C615AD54887E45.idx  audio_codec_gpio_if.h.5C423388AADD8DD8.idx  audio_codec_if.h.7109C23DCDEFF258.idx  audio_codec_sw_vol.c.6D0DB6CA16291B49.idx  audio_codec_sw_vol.h.0DE8F2D6B39B5F76.idx  audio_codec_vol_if.h.CC3812306481891B.idx  (+977 more)
main/: CMakeLists.txt  app_ui.c  app_ui.h  app_ui_music.c  app_ui_music.h  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  main.c  readme.md  sd_lvgl_fs.c  sd_lvgl_fs.h
main/asr/: app_sr.c
main/custom/: custom.c  custom.h  lv_conf_ext.h  pw.c  pw.h
main/spiffs_image/: README.txt
main/weather/: weather_client.c  weather_client.h
